# enumoid

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
enumoid_derive/: Cargo.toml  README.md
enumoid_derive/src/: generate.rs  lib.rs
src/: base.rs  flags.rs  iter.rs  lib.rs  map.rs  opt_map.rs  raw.rs  serde.rs  set.rs  sub_base.rs  vec.rs
tests/: tests.rs
tests/test/: drop_tracker.rs  first_last.rs  flags.rs  map.rs  mod.rs  opt_map.rs  order.rs  serde.rs  set.rs  sizes.rs  types.rs  vec.rs
