[package]
name = "enumoid_derive"
version = "0.1.1"
authors = ["Robin KAY <komadori@gekkou.co.uk>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Derive macro for Enum Indexed Containers"
readme = "README.md"
homepage = "https://github.com/komadori/enumoid"
repository = "https://github.com/komadori/enumoid"
keywords = ["enum", "flags", "map", "vector"]
categories = ["data-structures"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
enumoid = { path = ".." }
